force-app/main/default/objects/Chargebee_Event__c/Chargebee_Event__c.object-meta.xml
<CustomObject>
    <label>Chargebee Event</label>
    <nameField>
        <displayFormat>CB-Event{0000}</displayFormat>
        <label>Chargebee Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chargebee Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>