force-app/main/default/objects/Chargebee_Event__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chargebee Events</relationshipLabel>
    <relationshipName>Chargebee_Events</relationshipName>
    <type>Lookup</type>
</CustomField>