force-app/main/default/objects/Chargebee_Event__c/fields/CB_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>CB_Event_Type__c</fullName>
    <label>CB Event Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>