force-app/main/default/objects/Chargebee_Event__c/fields/CB_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>CB_Subscription_Id__c</fullName>
    <label>CB Subscription Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>