force-app/main/default/objects/Chargebee_Event__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Chargebee Events</relationshipLabel>
    <relationshipName>Chargebee_Events</relationshipName>
    <type>Lookup</type>
</CustomField>