force-app/main/default/objects/Chargebee_Event__c/fields/To_be_Processed__c.field-meta.xml
<CustomField>
    <fullName>To_be_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To be Processed</label>
    <type>Checkbox</type>
</CustomField>